--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,9 +7,9 @@
         android:showAsAction="ifRoom"/>
     
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_about"
+        android:icon="@drawable/ic_menu_about"
+        android:title="@string/action_about"
+        android:showAsAction="ifRoom"/>
     
 </menu>
