--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -3,23 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/about_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:padding="10dp"
-        android:text="关于"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/about_title"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/ic_launcher" />
@@ -33,7 +21,7 @@
         android:layout_alignTop="@+id/imageView1"
         android:layout_marginLeft="22dp"
         android:layout_toRightOf="@+id/imageView1"
-        android:text="接吻的艺术"
+        android:text="@string/app_name"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="30sp" />
 
