--- a/res/layout/activity_article.xml
+++ b/res/layout/activity_article.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    <TextView 
-        android:id="@+id/article_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:textStyle="bold"
-        android:textSize="20sp"/>
+    android:layout_height="match_parent" >
     
     <ScrollView 
         android:layout_width="match_parent"
@@ -23,4 +14,4 @@
         	android:textSize="18sp"/>
     </ScrollView>
     
-</LinearLayout>
+</RelativeLayout>
