--- a/res/drawable-hdpi/benefit_article_background.xml
+++ b/res/drawable-hdpi/benefit_article_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" 
      android:shape="rectangle"> 
 	<gradient 
-	    android:startColor="#7CCD7C"
-		android:endColor="#7CCD7C" 
+	    android:startColor="#cf0097"
+		android:endColor="#ff0097"
 		android:angle="270"/> 
          
 	<padding android:left="10dp" android:top="10dp"
