--- a/res/drawable-hdpi/literacy_article_background.xml
+++ b/res/drawable-hdpi/literacy_article_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" 
      android:shape="rectangle"> 
 	<gradient 
-	    android:startColor="#FF83FA"
-		android:endColor="#FF83FA" 
+	    android:startColor="#cce8cf"
+		android:endColor="#cce8cf"
 		android:angle="270"/> 
          
 	<padding android:left="10dp" android:top="10dp"
