--- a/res/values/about.xml
+++ b/res/values/about.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="about_introduction">Play, Learn and Grow Together.</string>
-   	<string name="about_version">Version：2.0</string>
+   	<string name="about_tip">If you are willing to know the way of kissing, knowledge and skills to tell me, it will likely appear in the next version.</string>
+	<string name="about_version">Version：2.0</string>
 	<string name="about_weixin">WeiXin：zaoqibu</string>
 	<string name="about_email">Email：zaoqibu@qq.com</string>
 	<string name="about_author">Author：Wang Junjian</string>
