--- a/res/layout/listviewwithimage_item.xml
+++ b/res/layout/listviewwithimage_item.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="#cce8cf">
+    android:orientation="vertical">
     
     <TextView 
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
     
 </LinearLayout>
