增加了腾讯广点通的banner广告

--- a/res/layout/activity_article.xml
+++ b/res/layout/activity_article.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+    
+    <RelativeLayout
+        android:id="@+id/gdtBannerAd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     
     <ScrollView 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
    	 	android:background="#fff1e0">
 	    <TextView 
 	        android:id="@+id/article_text"
@@ -15,4 +21,4 @@
         	android:textSize="18sp"/>
     </ScrollView>
     
-</RelativeLayout>
+</LinearLayout>
