--- a/res/values-zh/about.xml
+++ b/res/values-zh/about.xml
@@ -2,9 +2,9 @@
 <resources>
 	<string name="about_introduction">一起玩、学习、成长。</string>
    	<string name="about_tip">如果您乐于把知道的接吻方式、知识和技巧等告诉我，那么它将有可能在下一个版本中出现。</string>
-   	<string name="about_version">版本号：2.0</string>
+   	<string name="about_version">版本号：2.1</string>
 	<string name="about_weixin">微信号：zaoqibu</string>
 	<string name="about_email">邮　箱：zaoqibu@qq.com</string>
-	<string name="about_author">作　者：王军建</string>
+	<string name="about_author">作　者：早起步</string>
 	<string name="about_copyright">版权 @2014 早起步\n保留所有权利</string>
 </resources>
